--- a/k8s/ns.yml
+++ b/k8s/ns.yml
@@ -1,5 +1,4 @@
 apiVersion: v1
-kind: ServiceAccount
+kind: Namespace
 metadata:
-  name: cd-jenkins
-  namespace: jenkinscicd
+  name: jenkinscicdns 
