--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-terraform/*.json
-terraform/*.tfvars
-terraform/*.terraform
-terraform/*.tfstate*
+**/*.json
+**/*.tfvars
+**/*.terraform
+**/*.tfstate*
 k8s/jenkinscsr.yml
