--- a/k8s/jenkinsrolebinding.yml
+++ b/k8s/jenkinsrolebinding.yml
@@ -1,12 +1,13 @@
-apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: jenkinsrolebind
+  name: restricted-rolebinding
+  namespace: default
 subjects:
-  - kind: User
-    name: jenkins
-    apiGroup: rbac.authorization.k8s.io
+- kind: User
+  name: SAAccoutid
+  namespace: default
 roleRef:
-   kind: Role 
-   name: jenkinsrole
-   apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cicd-deployer
+  apiGroup: rbac.authorization.k8s.io
