--- a/k8s/jenkinsclusterrole.yml
+++ b/k8s/jenkinsclusterrole.yml
@@ -6,12 +6,13 @@ rules:
 - apiGroups:
   - extensions
   - apps
-  - v1
+  - ""  
   resources:
   - containers
   - endpoints
   - services
   - pods
+  - statefulsets
   verbs:
   - create
   - get
