--- a/k8s/jenkinsrolebinding.yml
+++ b/k8s/jenkinsrolebinding.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
 subjects:
 - kind: User
-  name: SAAccoutid
+  name: $(Service Account name)
   namespace: default
 roleRef:
   kind: ClusterRole
